--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
     <head>
         <title>Hearthstone Memory</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8" />
     </head>
     <body>
         <button type="button" id="bouton_nouvelle_partie">Nouvelle Partie</button>
         <button type="button" id="bouton_score">Score</button>
-
-        <div id="plateau_carte"> </div>
+        <div id="plateau_carte"></div>
     </body>
     <script src="plateau.js" type="text/javascript"></script>
+    <script src="jeu.js" type="text/javascript"></script>
 </html>
