--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <button type="button" id="bouton_nouvelle_partie">Nouvelle Partie</button>
         <button type="button" id="bouton_score">Score</button>
-        <div id="plateau_carte"></div>
+        <div id="plateau_carte"><img src="src/carte/dos.png"></div>
     </body>
-    <script src="plateau.js" type="text/javascript"></script>
-    <script src="jeu.js" type="text/javascript"></script>
+    <script src="Carte.js" type="text/javascript"></script>
+    <script src="Plateau.js" type="text/javascript"></script>
+    <script src="Jeu.js" type="text/javascript"></script>
 </html>
