--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8" />
     </head>
+
     <body>
         <button type="button" id="bouton_nouvelle_partie">Nouvelle Partie</button>
         <button type="button" id="bouton_score">Score</button>
+        <div id="indication_vie">
+            <span><b>Vie restantes : </b></span>
+            <b><span id="nombre_vie">3</span></b>
+        </div>
         <div id="plateau_carte"><img src="src/carte/dos.png"></div>
     </body>
     <script src="Carte.js" type="text/javascript"></script>
