--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
         <div id="indication_vie">
             <span><b>Vie restantes : </b></span>
-            <b><span id="nombre_vie">3</span></b>
+            <b><span id="nombre_vie">5</span></b>
         </div>
         
         <div id="plateau_carte"><img src="src/carte/dos.png"></div>
 
-        <span id="timer"></span>
+        <span id="chronometre"></span>
     </body>
     <script src="Carte.js" type="text/javascript"></script>
+    <script src="Chronometre.js" type="text/javascript"></script>
     <script src="Jeu.js" type="text/javascript"></script>
     <script src="Plateau.js" type="text/javascript"></script>
-    <script src="Chronometre.js" type="text/javascript"></script>
 </html>
